--- a/support.html
+++ b/support.html
@@ -90,7 +90,7 @@
                 </p>
 
                 <h3 class="text-lg font-semibold text-gray-800">How do I delete my account?</h3>
-                <p>You can delete your account from within the app.</p>
+                <p>You can delete your account and data from within the app.</p>
 
                 <!-- Technical Issues -->
                 <h2 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">Technical Issues</h2>
@@ -162,4 +162,5 @@
     </script>
 </body>
 </html>
+
 
