--- a/profile.html
+++ b/profile.html
@@ -22,13 +22,13 @@
     #profileAvatar { width: 4rem; height: 4rem; border-radius: 9999px; }
     @media (min-width: 768px) { #profileAvatar { width: 5rem; height: 5rem; } }
 
-    /* === Opaque safe-area strip + solid header (this page only) === */
+    /* Opaque safe-area strip + solid header (this page only) */
     body::before{
       content:"";
       position:fixed;
       top:0; left:0; right:0;
       height: env(safe-area-inset-top);
-      background:#fff;        /* opaque */
+      background:#fff;
       z-index:9998;
       pointer-events:none;
     }
@@ -37,7 +37,7 @@
 </head>
 <body class="bg-gray-50 font-inter">
   <div class="app-shell">
-    <!-- add header-solid to make it opaque -->
+    <!-- opaque header -->
     <header class="header-sticky header-solid border-b border-gray-200">
       <div class="px-4 py-4 md:px-8">
         <div class="flex items-center justify-between">
@@ -132,6 +132,37 @@
     </main>
   </div>
 
+  <!-- Delete confirmation modal -->
+  <div id="deleteConfirmModal" class="hidden fixed inset-0 bg-black bg-opacity-50 z-50 flex items-center justify-center p-4">
+    <div class="bg-white rounded-lg w-full max-w-md p-6 relative">
+      <div class="flex items-center space-x-3 mb-4">
+        <div class="w-12 h-12 bg-red-100 text-red-600 rounded-full flex items-center justify-center">
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L4.732 15.5c-.77.833.192 2.5 1.732 2.5z"></path>
+          </svg>
+        </div>
+        <div>
+          <h3 class="text-lg font-semibold text-red-900">Delete Account</h3>
+          <p class="text-sm text-red-700">This action cannot be undone</p>
+        </div>
+      </div>
+
+      <div class="mb-6">
+        <p class="text-gray-700 mb-3">To confirm deletion, please type your email address below:</p>
+        <label class="text-sm text-gray-600 block mb-1">Email</label>
+        <input id="emailConfirmation" type="email" placeholder="Enter your email" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-red-500 mb-2">
+        <p id="expectedEmailText" class="text-xs text-gray-500 mb-4">Expected: Loading...</p>
+      </div>
+
+      <div class="flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-3">
+        <button id="cancelDelete" class="w-full px-4 py-2 border border-gray-300 rounded-md hover:bg-gray-50 transition">Cancel</button>
+        <button id="confirmDelete" class="w-full px-4 py-2 bg-red-600 text-white rounded-md hover:bg-red-700 transition disabled:opacity-50 disabled:cursor-not-allowed" disabled>
+          Delete My Account
+        </button>
+      </div>
+    </div>
+  </div>
+
   <!-- Firebase (compat) -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-app-compat.min.js"></script>
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.0/firebase-auth-compat.min.js"></script>
@@ -150,14 +181,40 @@
         setTimeout(() => waitForFirebase(cb, tries - 1), 100);
       };
 
+      // UI elements for delete flow
+      const modalEl = document.getElementById('deleteConfirmModal');
+      const openBtn = document.getElementById('deleteAccountBtn');
+      const cancelBtn = document.getElementById('cancelDelete');
+      const confirmBtn = document.getElementById('confirmDelete');
+      const emailInput = document.getElementById('emailConfirmation');
+      const expectedEmailText = document.getElementById('expectedEmailText');
+
+      let expectedEmail = '';
+
+      function openModal() {
+        if (!modalEl) return;
+        emailInput.value = '';
+        confirmBtn.disabled = true;
+        modalEl.classList.remove('hidden');
+      }
+      function closeModal() {
+        if (!modalEl) return;
+        modalEl.classList.add('hidden');
+      }
+
       waitForFirebase(() => {
+        // Initialize if needed
         if (window.firebaseConfig && (!firebase.apps || !firebase.apps.length)) {
           firebase.initializeApp(window.firebaseConfig);
         }
+
+        // Auth state + populate email/avatar
         firebase.auth().onAuthStateChanged((user) => {
           if (!user) { window.location.href = './'; return; }
 
           const email = user.email || (user.providerData && user.providerData[0] && user.providerData[0].email) || '';
+          expectedEmail = email;
+
           const emailEl = document.getElementById('profileEmail');
           if (emailEl) emailEl.textContent = email || 'User';
 
@@ -171,14 +228,72 @@
           const avatar = document.getElementById('profileAvatar');
           if (avatar) avatar.textContent = initial;
 
-          const expectedText = document.getElementById('expectedEmailText');
-          if (expectedText) expectedText.textContent = 'Expected: ' + email;
+          if (expectedEmailText) expectedEmailText.textContent = 'Expected: ' + email;
+        });
+
+        // Wire up delete flow
+        if (openBtn) openBtn.addEventListener('click', openModal);
+        if (cancelBtn) cancelBtn.addEventListener('click', (e)=>{ e.preventDefault(); closeModal(); });
+
+        if (emailInput) {
+          emailInput.addEventListener('input', () => {
+            const match = (emailInput.value || '').trim().toLowerCase() === (expectedEmail || '').toLowerCase();
+            confirmBtn.disabled = !match;
+          });
+        }
+
+        if (confirmBtn) confirmBtn.addEventListener('click', async (e) => {
+          e.preventDefault();
+          confirmBtn.disabled = true;
+          const originalLabel = confirmBtn.textContent;
+          confirmBtn.textContent = 'Deleting...';
+
+          try {
+            const user = firebase.auth().currentUser;
+            if (!user) throw new Error('No authenticated user.');
+
+            // Try delete
+            await user.delete();
+            closeModal();
+            alert('Your account has been deleted.');
+            window.location.href = './';
+          } catch (err) {
+            // If Firebase requires recent login, prompt for password and reauth
+            if (err && (err.code === 'auth/requires-recent-login' || (err.message||'').includes('requires recent'))) {
+              const pwd = prompt('For security, please re-enter your password to delete your account:');
+              if (pwd) {
+                try {
+                  const cred = firebase.auth.EmailAuthProvider.credential(expectedEmail, pwd);
+                  await firebase.auth().currentUser.reauthenticateWithCredential(cred);
+                  await firebase.auth().currentUser.delete();
+                  closeModal();
+                  alert('Your account has been deleted.');
+                  window.location.href = './';
+                  return;
+                } catch (reauthErr) {
+                  alert('Re-authentication failed: ' + (reauthErr.message || reauthErr.code || 'Unknown error'));
+                }
+              } else {
+                alert('Deletion cancelled.');
+              }
+            } else {
+              alert('Delete failed: ' + (err && (err.message || err.code) || 'Unknown error'));
+            }
+            // restore button
+            confirmBtn.textContent = originalLabel;
+            confirmBtn.disabled = false;
+          }
+        });
+
+        // Also allow ESC to close modal
+        document.addEventListener('keydown', (ev)=>{
+          if (ev.key === 'Escape') closeModal();
         });
       });
 
+      // Ensure privacy link still works without module routing
       document.getElementById('privacy-link')?.addEventListener('click', (e) => {
-        e.preventDefault();
-        window.location.href = './privacy.html';
+        // let the normal href navigate; no preventDefault needed since href="./privacy.html"
       });
     });
   </script>
