--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </div>
           </div>
 
-          <nav class="flex items-center gap-2 sm:gap-3 ml-auto">
+          <nav class="flex items-center gap-2 sm:gap-3 ml-auto w-full md:w-auto justify-end">
             <!-- Logged out state -->
             <div id="loggedOutState">
               <button id="loginBtn" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm font-medium">
@@ -433,6 +433,7 @@
   </script>
 </body>
 </html>
+
 
 
 
