--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
 <title>CEORater</title>
 <link href="https://ceorater.com/" rel="canonical"/>
-<link crossorigin="" href="https://ceorater-backend-697273542938.us-south1.run.app" rel="preconnect"/>
+<link crossorigin="" href="https://get-ceos-test-847610982404.us-east4.run.app" rel="preconnect"/>
 <link crossorigin="" href="https://cdnjs.cloudflare.com" rel="preconnect"/>
-<link href="https://ceorater-backend-697273542938.us-south1.run.app" rel="dns-prefetch"/>
+<link href="https://get-ceos-test-847610982404.us-east4.run.app" rel="dns-prefetch"/>
 <!-- Preload favicon -->
 <link as="image" href="favicon-32x32.png" rel="preload" type="image/png"/>
 <link href="favicon-32x32.png" rel="icon" sizes="32x32" type="image/png"/>
@@ -46,7 +46,7 @@
 <link href="./dist/output.css" rel="stylesheet">
 <script>
     // Start fetching data immediately, before anything else loads
-    window.dataPromise = fetch('https://ceorater-backend-697273542938.us-south1.run.app/api/data')
+    window.dataPromise = fetch('https://get-ceos-test-847610982404.us-east4.run.app/api/data')
       .then(r => r.json())
       .catch(err => console.error('Early fetch failed:', err));
   </script>
@@ -352,3 +352,4 @@
   </script>
 </body>
 </html>
+
