--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 </button>
 </div>
 </div>
-<nav class="flex items-center gap-2 sm:gap-3">
+<nav class="flex items-center gap-2 sm:gap-3"><a class="hidden text-sm font-semibold text-blue-600 hover:underline" href="./profile.html" id="profileLink">Profile</a>
 <span class="hidden md:inline-block text-sm text-gray-600 px-3 py-1" id="userEmail"></span>
 <button class="px-3 py-1.5 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition text-sm" id="loginBtn">Log in</button>
 <button class="hidden px-3 py-1.5 border rounded-lg hover:bg-gray-100 transition text-sm" id="logoutBtn">Log out</button>
@@ -352,3 +352,4 @@
   </script>
 </body>
 </html>
+
