--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <link rel="canonical" href="https://ceorater.com/"/>
 
-<link rel="preconnect" href="https://ceorater-backend-697273542938.us-south1.run.app" crossorigin>
+<link rel="preconnect" href="https://get-ceos-test-847610982404.us-east4.run.app" crossorigin>
 <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-<link rel="dns-prefetch" href="https://ceorater-backend-697273542938.us-south1.run.app"/>
+<link rel="dns-prefetch" href="https://get-ceos-test-847610982404.us-east4.run.app"/>
 
 <!-- Preload favicon -->
 <link rel="preload" href="favicon-32x32.png" as="image" type="image/png">
@@ -56,7 +56,7 @@
 
 <script>
   // Start fetching data immediately, before anything else loads
-  window.dataPromise = fetch('https://ceorater-backend-697273542938.us-south1.run.app/api/data')
+  window.dataPromise = fetch('https://get-ceos-test-847610982404.us-east4.run.app/api/data')
     .then(r => r.json())
     .catch(err => console.error('Early fetch failed:', err));
 </script>
@@ -378,3 +378,4 @@
 </script>
 </body>
 </html>
+
